# kate-discord-rpc

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
packaging/arch/: PKGBUILD
src/: CMakeLists.txt  discordrpcconfigpage.cpp  discordrpcconfigpage.h  discordrpcplugin.cpp  discordrpcplugin.h  discordrpcplugin.json
